--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,91 +1,81 @@
-$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
+@import "font-awesome.min.css";
 
 body {
-  padding: 0;
+	-webkit-font-smoothing: antialiased;
+	font: normal 15px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #232525;
+	// padding-top:70px;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+#slides {
+	display: none;
+
+	.slidesjs-navigation {
+		margin-top:3px;
+	}
+
+	.slidesjs-previous {
+		margin-right: 5px;
+		float: left;
+	}
+
+	.slidesjs-next {
+		margin-right: 5px;
+		float: left;
+	}
+
+	a{
+		&:link,
+		&:visited {
+			color: #333
+		}
+
+		&:hover,
+		&:active {
+			color: #9e2020
+		}
+	}
+
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
 
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
+.slidesjs-pagination {
+	margin: 6px 0 0;
+	float: right;
+	list-style: none;
+
+	li {
+		float: left;
+		margin: 0 1px;
+		a {
+			display: block;
+			width: 13px;
+			height: 0;
+			padding-top: 13px;
+			background-image: url(../images/pagination.png);
+			background-position: 0 0;
+			float: left;
+			overflow: hidden;
+
+			.active,
+			&:hover.active {
+				background-position: 0 -13px
+			}
+			&:hover {
+				background-position: 0 -26px
+			}
+		}
+	}
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
 
-.container-narrow > hr {
-  margin: 30px 0;
-}
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
 
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
-  }
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.navbar {
+	overflow: hidden
 }
