--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,81 +1,64 @@
-
+$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+@import "font-awesome.min.css";
 // endbower
 
-@import "font-awesome.min.css";
-
 body {
-	-webkit-font-smoothing: antialiased;
-	font: normal 15px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color: #232525;
-	// padding-top:70px;
+    -webkit-font-smoothing: antialiased;
+    font: normal 15px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #232525;
+    // padding-top: 70px;
 }
 
 #slides {
-	display: none;
-
-	.slidesjs-navigation {
-		margin-top:3px;
-	}
-
-	.slidesjs-previous {
-		margin-right: 5px;
-		float: left;
-	}
-
-	.slidesjs-next {
-		margin-right: 5px;
-		float: left;
-	}
-
-	a{
-		&:link,
-		&:visited {
-			color: #333
-		}
-
-		&:hover,
-		&:active {
-			color: #9e2020
-		}
-	}
-
+    display: none;
+    .slidesjs-navigation {
+        margin-top: 3px;
+    }
+    .slidesjs-previous {
+        margin-right: 5px;
+        float: left;
+    }
+    .slidesjs-next {
+        margin-right: 5px;
+        float: left;
+    }
+    a{
+    	&:link,
+    	&:visited {
+    	    color: #333
+    	}
+    	&:hover,
+    	&:active {
+    	    color: #9e2020
+    	}
+    }
 }
-
 
 .slidesjs-pagination {
-	margin: 6px 0 0;
-	float: right;
-	list-style: none;
-
-	li {
-		float: left;
-		margin: 0 1px;
-		a {
-			display: block;
-			width: 13px;
-			height: 0;
-			padding-top: 13px;
-			background-image: url(../images/pagination.png);
-			background-position: 0 0;
-			float: left;
-			overflow: hidden;
-
-			.active,
-			&:hover.active {
-				background-position: 0 -13px
-			}
-			&:hover {
-				background-position: 0 -26px
-			}
-		}
-	}
-}
-
-
-
-
-.navbar {
-	overflow: hidden
+    margin: 6px 0 0;
+    float: right;
+    list-style: none;
+    li {
+        float: left;
+        margin: 0 1px;
+        a {
+            display: block;
+            width: 13px;
+            height: 0;
+            padding-top: 13px;
+            background-image: url(../images/pagination.png);
+            background-position: 0 0;
+            float: left;
+            overflow: hidden;
+            &.active,
+            &:hover.active {
+                background-position: 0 -13px
+            }
+            &:hover {
+                background-position: 0 -26px
+            }
+        }
+    }
 }
