--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,29 +1,29 @@
-  <!-- SlidesJS Required: Link to jQuery -->
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <!-- End SlidesJS Required -->
+	<!-- SlidesJS Required: Link to jQuery -->
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<!-- End SlidesJS Required -->
 
-  <!-- SlidesJS Required: Link to jquery.slides.js -->
-  <script src="scripts/jquery.slides.min.js"></script>
-  <!-- End SlidesJS Required -->
+	<!-- SlidesJS Required: Link to jquery.slides.js -->
+	<script src="scripts/jquery.slides.min.js"></script>
+	<!-- End SlidesJS Required -->
 
 
-  
+	
 
-<div id="slides">
-    <img src="images/example-slide-1.jpg" alt="Photo by: Missy S Link: http://www.flickr.com/photos/listenmissy/5087404401/">
-    <img src="images/example-slide-2.jpg" alt="Photo by: Daniel Parks Link: http://www.flickr.com/photos/parksdh/5227623068/">
-    <img src="images/example-slide-3.jpg" alt="Photo by: Mike Ranweiler Link: http://www.flickr.com/photos/27874907@N04/4833059991/">
-    <img src="images/example-slide-4.jpg" alt="Photo by: Stuart SeegerLink: http://www.flickr.com/photos/stuseeger/97577796/">
-    <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
-    <a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
+<div id="slides" >
+		<div  ng-repeat="slide in slides">
+			<img ng-src="{{slide}}" alt="Photo by:">
+		</div>
+
+		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
+		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
 </div>
 
-  <script>
-    $(function() {
-      $('#slides').slidesjs({
-        width: 940,
-        height: 528,
-        navigation: false
-      });
-    });
-  </script>
+	<script>
+		$(function() {
+			$('#slides').slidesjs({
+				width: 940,
+				height: 528,
+				navigation: false
+			});
+		});
+	</script>
